<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.leaguehelper.pages.profile.ProfileSearchSummonerViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_48"
            android:clipToPadding="false"
            android:layout_gravity="center">

            <TextView
                android:text="@string/profile_search_summoner_title"
                style="@style/LeagueTextBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_search_summoner_hint"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginBottom="@dimen/margin_24"/>

            <Button
                android:text="@string/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/LeaguePrimaryButton"/>

        </LinearLayout>

    </FrameLayout>


</layout>